<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Focco Notifica</string>
    <string name="etc">&#8230;</string>
    <string name="ok">OK</string>
    <string name="configurar">Configurações</string>
    <string name="atualizar">Atualizar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="cancelar">Cancelar</string>

<!-- Strings de Configuração -->
    <string name="confAplicacao">Aplicação</string>
    <string name="confAplNotificaSum">Exibe novas notificações</string>
    <string name="confAplNotificaTit">Notificações</string>
    <string name="confServidor">Servidor</string>
    <string name="confServEnderSum">Endereço do Servidor</string>
    <string name="confServEnderTit">Endereço Servidor</string>
    <string name="confServServicoSum">Serviço do Servidor</string>
    <string name="confServServicoTit">Serviço Servidor</string>


</resources>