<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.focco.focconotifica" >

    <item
        android:id="@+id/mnuBuscar"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/pesquisar"/>
    <item
        android:id="@+id/mnuAtualiza"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/atualizar"/>
    <item
        android:id="@+id/mnuConfig"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/configurar"/>

</menu>